--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,26 @@
+body {
+  background: repeating-linear-gradient(
+    90deg,
+    #606dbc,
+    #606dbc 10px,
+    #465298 10px,
+    #465298 20px
+  );
+}
+/*.container {
+  box-sizing: content-box;
+}*/
+.jumbotron {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.card {
+    border: 18px dotted #F48FB1;
+}
 .form-group {
   padding: 70px 10px 70px 10px;
 }
-.form-group {
-    margin-bottom: 0;
-}
-#igpay {
+#ardcay {
   display: none;
+  margin-top: 1em;
 }
